settings: Fix text alignment in save and discard buttons.
The text inside save/discard widget buttons was misaligned with
respect to the icon in the button. To align it properly, we add
vertical-align and a reduced line-height property to the span.

Fixes: #20583.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1076,6 +1076,7 @@ input[type="checkbox"] {
         text-decoration: none;
         color: hsl(0, 0%, 47%);
         min-width: 80px;
+        /* Limit the height of the button */
         line-height: 1.2;
         vertical-align: text-bottom;
 
@@ -1117,6 +1118,11 @@ input[type="checkbox"] {
             margin-right: 3px;
             font-size: 15px;
             font-weight: 500;
+        }
+
+        .save-discard-widget-button-text {
+            vertical-align: middle;
+            line-height: 1;
         }
     }
 
